--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Rene Damm <rene.damm@gmx.net>"]
 edition = "2018"
 
 [dependencies]
-notify = "4.0.17"
+notify = "5.0.0-pre.13"
 chrono = "0.4.19"
 serde = "1.0.136"
 serde_json = "1.0.79"
