--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,16 +9,8 @@ notify = "5.0.0-pre.13"
 chrono = "0.4.19"
 serde = "1.0.136"
 serde_json = "1.0.79"
-
-[dependencies.rocket]
-version = "0.5.0-rc.1"
-#features = ["json"]
-
-[dependencies.rusqlite]
-version = "0.25.0"
-features = ["bundled"]
-
-[dependencies.rocket_sync_db_pools]
-version = "0.1.0-rc.1"
-default-features = false
-features = ["sqlite_pool"]
+tokio = { version = "1", features = ["full"] }
+warp = "0.3"
+rusqlite = { versio = "0.25.0", features = ["bundled"] }
+r2d2 = "0.8.9"
+r2d2_sqlite = "0.20.0"
