--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ serde = "1.0.136"
 serde_json = "1.0.79"
 tokio = { version = "1", features = ["full"] }
 warp = "0.3"
-rusqlite = { versio = "0.25.0", features = ["bundled"] }
+rusqlite = { features = ["bundled"] }
 r2d2 = "0.8.9"
 r2d2_sqlite = "0.20.0"
 urlencoding = "2.1.0"
